Completed Module 19 Notebook

--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -9,14 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -24,39 +28,145 @@
    "metadata": {},
    "source": [
     "## Retrieve the Data\n",
-    "\n",
-    "The data is located in the Challenge Files Folder:\n",
-    "\n",
-    "* `lending_data.csv`\n",
-    "\n",
-    "Import the data using Pandas. Display the resulting dataframe to confirm the import was successful."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_size</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>borrower_income</th>\n",
+       "      <th>debt_to_income</th>\n",
+       "      <th>num_of_accounts</th>\n",
+       "      <th>derogatory_marks</th>\n",
+       "      <th>total_debt</th>\n",
+       "      <th>loan_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.672</td>\n",
+       "      <td>52800</td>\n",
+       "      <td>0.431818</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8400.0</td>\n",
+       "      <td>6.692</td>\n",
+       "      <td>43600</td>\n",
+       "      <td>0.311927</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13600</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>6.963</td>\n",
+       "      <td>46100</td>\n",
+       "      <td>0.349241</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.664</td>\n",
+       "      <td>52700</td>\n",
+       "      <td>0.430740</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22700</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10800.0</td>\n",
+       "      <td>7.698</td>\n",
+       "      <td>53000</td>\n",
+       "      <td>0.433962</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
+       "0    10700.0          7.672            52800        0.431818                5   \n",
+       "1     8400.0          6.692            43600        0.311927                3   \n",
+       "2     9000.0          6.963            46100        0.349241                3   \n",
+       "3    10700.0          7.664            52700        0.430740                5   \n",
+       "4    10800.0          7.698            53000        0.433962                5   \n",
+       "\n",
+       "   derogatory_marks  total_debt  loan_status  \n",
+       "0                 1       22800            0  \n",
+       "1                 0       13600            0  \n",
+       "2                 0       16100            0  \n",
+       "3                 1       22700            0  \n",
+       "4                 1       23000            0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Import the data\n"
+    "# Import the data\n",
+    "\n",
+    "df = pd.read_csv('Resources/lending_data.csv')\n",
+    "df.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict Model Performance\n",
-    "\n",
-    "You will be creating and comparing two models on this data: a Logistic Regression, and a Random Forests Classifier. Before you create, fit, and score the models, make a prediction as to which model you think will perform better. You do not need to be correct! \n",
-    "\n",
-    "Write down your prediction in the designated cells in your Jupyter Notebook, and provide justification for your educated guess."
+    "## Predict Model Performance\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Replace the text in this markdown cell with your predictions, and be sure to provide justification for your guess.*"
+    "After having a look over the csv, the data is all numeric and it looks like there is a linear relationship between the parameters (Particularly interest rate) and the loan status. A Logistic Regression model tends to performs better with numerical data while the Random Forest model tends to fit better to categorical data. This leads me to believe the Logistic Regression model will perform better."
    ]
   },
   {
@@ -68,53 +178,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the data into X_train, X_test, y_train, y_test\n"
+    "# Define the X (features) and y (target) sets\n",
+    "\n",
+    "X = df.drop('loan_status', axis=1)\n",
+    "y = df['loan_status'].values\n",
+    "\n",
+    "# Split the data into X_train, X_test, y_train, y_test\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalise the data\n",
+    "\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create, Fit and Compare Models\n",
-    "\n",
-    "Create a Logistic Regression model, fit it to the data, and print the model's score. Do the same for a Random Forest Classifier. You may choose any starting hyperparameters you like. \n",
-    "\n",
-    "Which model performed better? How does that compare to your prediction? Write down your results and thoughts in the designated markdown cell."
+    "## Create, Fit and Compare Models\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9942908240473243\n",
+      "Testing Score: 0.9936545604622369\n"
+     ]
+    }
+   ],
    "source": [
-    "# Train a Logistic Regression model and print the model score"
+    "# Train a Logistic Regression model and print the model score\n",
+    "\n",
+    "clf = LogisticRegression().fit(X_train_scaled, y_train)\n",
+    "print(f'Training Score: {clf.score(X_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test_scaled, y_test)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9974893382858715\n",
+      "Testing Score: 0.9910751134956666\n"
+     ]
+    }
+   ],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score\n"
+    "# Train a Random Forest Classifier model and print the model score\n",
+    "\n",
+    "clf = RandomForestClassifier(random_state=1, n_estimators=50).fit(X_train_scaled, y_train)\n",
+    "print(f'Training Score: {clf.score(X_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test_scaled, y_test)}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Which model performed better? How does that compare to your prediction? Replace the text in this markdown cell with your answers to these questions.*"
+    "Both models had a similar outcome. The Logistic Regression model had a lower training score but had more accuracy with the testing data, whereas the Random Forest Model had a better training score but a less accurate testing score.\n",
+    "\n",
+    "In my initial predictions, I had thought that the Logistic Regression Model would outperform the Random Forest Classifier model (Which it did)2, what I did not expect there to be so little difference between the two.\n",
+    "\n",
+    "I believe with more time and different hyper parameters, I may be able to improve both models which may lead to the Random Forest Classifier being more accurate in the end.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
